중간고사 실습

--- a/views/transportation.ejs
+++ b/views/transportation.ejs
@@ -7,8 +7,8 @@
     <title>UT-NodeJS 중간고사 | Transportation</title>
 
     <!-- 학생 이름과 학번 -->
-    <meta name="author" content="???" />
-    <meta name="description" content="???" />
+    <meta name="author" content="손성훈" />
+    <meta name="description" content="2425406" />
 
     <!-- CSS 파일에 대한 link테그를 수정하십시오 -->
     <link rel="stylesheet" href="../public/css/style.css" />
@@ -24,37 +24,7 @@
   </head>
 
   <body>
-    <!-- HEADER -->
-    <header class="header">
-      <div class="container">
-        <div class="container-left">
-          <!-- 로고 -->
-          <figure class="logo">
-            <a href="/">
-              🚈
-              <h1 class="site-title">
-                <span class="ut-red">UT</span>-NodeJS 중간고사
-              </h1>
-            </a>
-          </figure>
-
-          <!-- 메뉴 -->
-          <nav class="menu">
-            <a
-              class="menu-item nav-link active"
-              name="Transportation"
-              href="/transportation.html"
-              >교통</a
-            >
-            <a class="menu-item" name="Contact" href="/contact.html">연락</a>
-          </nav>
-
-          <!-- 반응형 메뉴 버튼 -->
-          <div id="menu-button">Menu</div>
-        </div>
-      </div>
-    </header>
-
+   
     <!-- MAIN 페이지 내용 -->
     <main class="">
       <div
