--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -7,8 +7,8 @@
     <title>UT-NodeJS 중간고사 | Contact</title>
 
     <!-- 학생 이름과 학번 -->
-    <meta name="author" content="???" />
-    <meta name="description" content="???" />
+    <meta name="author" content="손성훈" />
+    <meta name="description" content="2425406" />
 
     <!-- CSS 파일에 대한 link테그를 수정하십시오 -->
     <link href="../public/css/bootstrap.min.css" rel="stylesheet" />
@@ -24,39 +24,7 @@
   </head>
 
   <body>
-    <!-- HEADER -->
-    <header class="header">
-      <div class="container">
-        <div class="container-left">
-          <!-- 로고 -->
-          <figure class="logo">
-            <a href="/">
-              🚈
-              <h1 class="site-title">
-                <span class="ut-red">UT</span>-NodeJS 중간고사
-              </h1>
-            </a>
-          </figure>
-
-          <!-- 메뉴 -->
-          <nav class="menu">
-            <a
-              class="menu-item"
-              name="Transportation"
-              href="/transportation.html"
-              >교통</a
-            >
-            <a class="menu-item active" name="Contact" href="/contact.html"
-              >연락</a
-            >
-          </nav>
-
-          <!-- 반응형 메뉴 버튼 -->
-          <div id="menu-button">Menu</div>
-        </div>
-      </div>
-    </header>
-
+    
     <!-- MAIN 페이지 내용 -->
     <main class="">
       <div class="container col-xl-10 col-xxl-8 px-4 py-5">
@@ -74,7 +42,7 @@
           <div class="col-md-10 mx-auto col-lg-5 mb-5">
             <form
               class="p-4 p-md-5 border rounded-3 bg-light"
-              action="/"
+              action="/contact"
               method="post"
             >
               <div class="form-floating mb-3">
@@ -117,7 +85,7 @@
     <!-- FOOTER -->
     <footer class="text-center fixed-bottom bg-dark text-bg-dark pt-3">
       <p class="ut-red">
-        <span class="text-white">&copy; 2023</span> [[[ 학생의 이름과 학번 ]]]
+        <span class="text-white">&copy; 손성훈 2425406</span> [[[ 학생의 이름과 학번 ]]]
       </p>
     </footer>
 
